fix des catégories 'Marque' du footer qui sortaient de la zone défini dans une définition tablet

--- a/client/src/components/Footer.css
+++ b/client/src/components/Footer.css
@@ -134,8 +134,10 @@
   .footer {
     display: flex;
     flex-direction: row;
+    justify-content: center;
     align-items: center;
-    height: 300px;
+    height: fit-content;
+    width: 100vw;
   }
 
   .logosAndNewsletter {
